# capstone_project_unfc

./: .env.example  .gitignore  Description.md  README.md  main.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt
.github/instructions/: general.instructions.md
backend/: README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
backend/analytics/: __init__.py  metrics.py
backend/analytics/forecasting/: __init__.py  base.py  chronos2.py  lstm.py  prophet.py  prophet_xgb.py
backend/analytics/optimization/: __init__.py  portfolio.py  risk_metrics.py
backend/app/: forecast_routes.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  analyze.py  assets.py  forecast.py  portfolio.py  prices.py
backend/core/: config.py  database.py
backend/data_engine/: __init__.py  coordinator.py  data_coordinator.py  fetcher.py  yfinance_fetcher.py
backend/data_engine/forecasting/: __init__.py  base_forecaster.py  factory.py  lstm_model.py  prophet_model.py
backend/schemas/: __init__.py  analyze.py  assets.py  forecast.py  portfolio.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_assets.py  test_portfolio.py  test_sync.py
docs/: Phase_1_Foundation.md  Phase_2_Validation.md
frontend/: .env.example  .gitignore  app.py  package-lock.json  package.json
frontend/pages/: 01_Single_Asset.py  02_Comparison.py
frontend/src/: App.tsx
model/notebooks/: 01-baseline.ipynb  02-lstm-model.ipynb  02-lstm.ipynb  03-prophet.ipynb  04-xgboost-univariate.ipynb  (+7 more)
notebooks/: Optimizacion.ipynb
supabase/: config.toml  seed.sql
(+17 files in other folders)
