[project]
name = "capstone-project-unfc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "fastapi[standard]>=0.128.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.19.0",
    "supabase>=2.27.2",
    "yfinance>=1.1.0",
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]
